# ChangeLog for app-admin/syslog-ng
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/ChangeLog,v 1.368 2013/11/14 02:40:37 patrick Exp $

  14 Nov 2013; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Remove unneeded useflag description from metadata.xml

  13 Nov 2013; Michael Sterrett <mr_bones_@gentoo.org>
  -files/syslog-ng.conf.gentoo.3.2, -files/syslog-ng.conf.gentoo.fbsd.3.2,
  -files/syslog-ng.conf.gentoo.hardened.3.2, -files/syslog-ng.rc6.3,
  -syslog-ng-3.2.5.ebuild:
  old

  13 Nov 2013; Michael Sterrett <mr_bones_@gentoo.org>
  -files/syslog-ng-3.3.5-afsocket.patch, -files/syslog-ng-3.3.5-compile.patch,
  -files/syslog-ng-3.3.5-gprocess.patch, -files/syslog-ng-3.3.5-include.patch,
  -files/syslog-ng-3.3.5-threading.patch, -files/syslog-ng-3.3.5-utmpx.patch,
  -files/syslog-ng.conf.gentoo.3.3, -files/syslog-ng.conf.gentoo.fbsd.3.3,
  -files/syslog-ng.conf.gentoo.hardened.3.3, -files/syslog-ng.rc6.3.3,
  -syslog-ng-3.3.5-r1.ebuild:
  old

  13 Nov 2013; Michael Sterrett <mr_bones_@gentoo.org> syslog-ng-3.4.2.ebuild:
  add -j1 so stable users don't encounter the parallel make install bug

  13 Nov 2013; Michael Sterrett <mr_bones_@gentoo.org>
  -files/3.4/syslog-ng-3.4.3-autotools.patch,
  -files/3.4/syslog-ng-3.4.4-autotools.patch, -syslog-ng-3.4.3.ebuild,
  -syslog-ng-3.4.4.ebuild:
  old

*syslog-ng-3.4.5 (04 Nov 2013)

  04 Nov 2013; Michael Sterrett <mr_bones_@gentoo.org> +syslog-ng-3.4.5.ebuild:
  version bump

  18 Oct 2013; Michael Sterrett <mr_bones_@gentoo.org>
  files/3.4/syslog-ng-3.4.4-autotools.patch:
  fix up the autotools patch (bug #488444)

*syslog-ng-3.4.4 (17 Oct 2013)

  17 Oct 2013; Michael Sterrett <mr_bones_@gentoo.org>
  +files/3.4/syslog-ng-3.4.4-autotools.patch, +syslog-ng-3.4.4.ebuild:
  version bump

  14 Oct 2013; Michael Sterrett <mr_bones_@gentoo.org> syslog-ng-3.4.3.ebuild:
  better systemd support (bug #487996)
