@@ -1,0 +1,14 @@
+DEFINED_PHASES=configure install postinst
+DEPEND=pcre? ( dev-libs/libpcre ) spoof-source? ( net-libs/libnet:1.1 ) ssl? ( dev-libs/openssl:= ) smtp? ( net-libs/libesmtp ) tcpd? ( >=sys-apps/tcp-wrappers-7.6 ) >=dev-libs/eventlog-0.2.12 >=dev-libs/glib-2.10.1:2 json? ( >=dev-libs/json-c-0.9 ) caps? ( sys-libs/libcap ) geoip? ( >=dev-libs/geoip-1.5.0 ) dbi? ( >=dev-db/libdbi-0.8.3 ) systemd? ( sys-apps/systemd ) virtual/pkgconfig sys-devel/flex virtual/pkgconfig
+DESCRIPTION=syslog replacement with advanced filtering features
+EAPI=5
+HOMEPAGE=http://www.balabit.com/network-security/syslog-ng
+IUSE=caps dbi geoip ipv6 json mongodb +pcre smtp spoof-source ssl systemd tcpd
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd
+LICENSE=GPL-2+ LGPL-2.1+
+RDEPEND=pcre? ( dev-libs/libpcre ) spoof-source? ( net-libs/libnet:1.1 ) ssl? ( dev-libs/openssl:= ) smtp? ( net-libs/libesmtp ) tcpd? ( >=sys-apps/tcp-wrappers-7.6 ) >=dev-libs/eventlog-0.2.12 >=dev-libs/glib-2.10.1:2 json? ( >=dev-libs/json-c-0.9 ) caps? ( sys-libs/libcap ) geoip? ( >=dev-libs/geoip-1.5.0 ) dbi? ( >=dev-db/libdbi-0.8.3 ) systemd? ( sys-apps/systemd )
+RESTRICT=test
+SLOT=0
+SRC_URI=http://www.balabit.com/downloads/files/syslog-ng/sources/3.4.6/source/syslog-ng_3.4.6.tar.gz
+_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	multilib	892e597faee02a5b94eb02ab512e7622	systemd	9f063b2cc19c5e8030911372aa246c4e	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=3b95e6925989470f6cf2f4bd6c7208ce
