@@ -1,11 +1,12 @@
-DEFINED_PHASES=compile install postinst postrm prepare test unpack
-DEPEND==dev-python/docutils-0.10* >=dev-python/flask-0.10.1 >=dev-python/flask-babel-0.7 >=dev-python/flask-script-0.5.3 >=dev-python/frozen-flask-0.7 >=dev-python/jinja-2.5.2 >=dev-vcs/mercurial-1.6 dev-python/pyyaml dev-python/setuptools dev-python/pygments git? ( =dev-python/pygit2-0.19* ) doc? ( dev-python/sphinx ) test? ( dev-python/mock =dev-python/pygit2-0.19* ) =dev-lang/python-2.7* >=dev-vcs/git-1.8.2.1
+DEFINED_PHASES=compile install postinst postrm prepare setup test unpack
+DEPEND==dev-python/docutils-0.10* >=dev-python/flask-0.10.1 >=dev-python/flask-babel-0.7 >=dev-python/flask-script-0.5.3 >=dev-python/frozen-flask-0.7 >=dev-python/jinja-2.5.2 dev-python/pyyaml dev-python/setuptools dev-python/pygments git? ( =dev-python/pygit2-0.20* ) mercurial? ( >=dev-vcs/mercurial-1.6 ) doc? ( dev-python/sphinx ) test? ( dev-python/mock ) =dev-lang/python-2.7* >=dev-vcs/git-1.8.2.1
 DESCRIPTION=A Mercurial (or Git) based blogging engine.
-EAPI=3
+EAPI=5
 HOMEPAGE=http://blohg.org/ http://pypi.python.org/pypi/blohg
-IUSE=doc git test
+IUSE=doc git +mercurial test
 LICENSE=GPL-2
-RDEPEND==dev-python/docutils-0.10* >=dev-python/flask-0.10.1 >=dev-python/flask-babel-0.7 >=dev-python/flask-script-0.5.3 >=dev-python/frozen-flask-0.7 >=dev-python/jinja-2.5.2 >=dev-vcs/mercurial-1.6 dev-python/pyyaml dev-python/setuptools dev-python/pygments git? ( =dev-python/pygit2-0.19* ) =dev-lang/python-2.7*
+RDEPEND==dev-python/docutils-0.10* >=dev-python/flask-0.10.1 >=dev-python/flask-babel-0.7 >=dev-python/flask-script-0.5.3 >=dev-python/frozen-flask-0.7 >=dev-python/jinja-2.5.2 dev-python/pyyaml dev-python/setuptools dev-python/pygments git? ( =dev-python/pygit2-0.20* ) mercurial? ( >=dev-vcs/mercurial-1.6 ) =dev-lang/python-2.7*
+REQUIRED_USE=|| ( git mercurial ) test? ( git mercurial )
 SLOT=0
 _eclasses_=distutils	34e0f373c466bb0e97ba194735f1acf2	eutils	4878e7f88afc0ba0866ac112190b0fd4	git-r3	f089608c770d9ad72a2c92b547d2b20d	multilib	892e597faee02a5b94eb02ab512e7622	python	305197b0aa1194fa3ef67ca21f6faa7e	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=547cbb9930c5464f5ef654592f15d922
+_md5_=1ba0a9213e302bdad5f8800b61c004e3
