@@ -5,11 +5,13 @@
 		<email>rafaelmartins@gentoo.org</email>
 		<name>Rafael G. Martins</name>
 	</maintainer>
-	<longdescription lang="en">blohg is a Mercurial-based blogging engine written in Python, built with
-	the Flask micro-framework and some of his available extensions. All the
-	content of the blogs are stored inside Mercurial repositories and the
-	repository history is used for build the posts and pages. blohg uses
-	Jinja2 as template engine.</longdescription>
+	<longdescription lang="en">
+		blohg is a Mercurial (or Git) based blogging engine written in Python,
+		built with the Flask micro-framework and some of his available extensions.
+		All the content of the blogs are stored inside repositories and the
+		repository history is used for build the posts and pages. blohg uses
+		Jinja2 as template engine.
+	</longdescription>
 	<upstream>
 		<maintainer status="active">
 			<email>rafaelmartins@gentoo.org</email>
@@ -20,5 +22,6 @@
 	</upstream>
 	<use>
 		<flag name="git">Enable Git support</flag>
+		<flag name="mercurial">Enable Mercurial support</flag>
 	</use>
 </pkgmetadata>
