@@ -1,6 +1,13 @@
 # ChangeLog for www-apps/blohg
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/blohg/ChangeLog,v 1.28 2013/11/28 05:29:24 rafaelmartins Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/blohg/ChangeLog,v 1.30 2013/11/29 03:54:22 rafaelmartins Exp $
+
+  29 Nov 2013; Rafael G. Martins <rafaelmartins@gentoo.org> blohg-9999.ebuild,
+  metadata.xml:
+  Added mercurial USE flag for live ebuild
+
+  29 Nov 2013; Rafael G. Martins <rafaelmartins@gentoo.org> blohg-9999.ebuild:
+  Bump pygit2 for the live ebuild
 
   28 Nov 2013; Rafael G. Martins <rafaelmartins@gentoo.org> blohg-0.12.ebuild,
   blohg-9999.ebuild:
