@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/syslog-ng
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/ChangeLog,v 1.368 2013/11/14 02:40:37 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/ChangeLog,v 1.369 2013/11/29 02:25:01 mr_bones_ Exp $
+
+*syslog-ng-3.4.6 (29 Nov 2013)
+
+  29 Nov 2013; Michael Sterrett <mr_bones_@gentoo.org> +syslog-ng-3.4.6.ebuild:
+  version bump
 
   14 Nov 2013; Patrick Lauer <patrick@gentoo.org> metadata.xml:
   Remove unneeded useflag description from metadata.xml
